skeleton of the menu bar of dashboard page

--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -28,8 +28,90 @@
           </p>
           <ul class="menu-list">
             <li><a>Feed</a></li>
+        
 
           </ul>
+          <!-- post code-->
+          <div class="field">
+            <label class="label">Board near</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Your postal code">
+            </div>  
+          </div>
+          <!-- post code-->
+
+          <!-- date picker-->
+          <!-- 可以放一个date picker这里-->
+          <!-- date picker-->
+
+          <!-- select dog or cat-->
+          <div class="control">
+            <label class="label">I have a</label>
+            <label class="radio">
+              <input type="radio" name="dogSelect">
+              Dog
+            </label>
+            <label class="radio">
+              <input type="radio" name="catSelect" checked>
+              Cat
+            </label>
+          </div>
+          <!-- select dog or cat-->
+
+          <!-- select nubmer of pets-->
+          <label class="label">Pet number</label>
+          <div class="field is-grouped is-grouped-multiline">
+            <p class="control">
+              <a class="button">
+                One
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                Two
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                Three
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                Four and Four+
+              </a>
+          </div>
+          <!-- select nubmer of pets-->
+
+          <!-- select pet size-->
+          <label class="label">Pet size</label>
+          <div class="field is-grouped is-grouped-multiline">
+            <p class="control">
+              <a class="button">
+                0-15
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                16-40
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                41-100
+              </a>
+            </p>
+            <p class="control">
+              <a class="button">
+                100+
+              </a>
+          </div>
+          <!-- select pet size-->
+
+          <!-- Find button-->
+          <label class="label">Now find your hosts!</label>
+          <button class="button is-primary">Find!</button>
+          <!-- Find button-->
         </aside>
       </div>
       <div class="column is-4-desktop is-offset-2-desktop is-8-tablet">
@@ -50,6 +132,8 @@
       </div>
     </div>
 
+    <!-- divide         -->
+    
 </body>
 
 <%- include('../partials/footer') %>
