updated layout for milestone 2

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -18,6 +18,12 @@
       .center {
         text-align: center;
       }
+      .my-nav-item {
+        color: white;
+      }
+      .my-nav-item:hover {
+        color: #485fc7;
+      }
 
     </style>
 </head>
@@ -30,10 +36,10 @@
     <div class="hero-body">
       <div class="container">
         <p class="title">
-          RuffHouse
+          Pet-Sit!
         </p>
         <p class="subtitle">
-          A social site for your furry family!
+          Search and arrange pet-sitting with ease.
         </p>
         <a href="/sign-up" class="button is-primary">Sign Up</a>
       </div>
@@ -42,20 +48,20 @@
   <nav class="level my-level container">
     <div class="level-item has-text-centered">
       <div>
-        <p class="title">Share</p>
-        <p class="subtitle">Post pictures of your pets!</p>
+        <p class="title">Search</p>
+        <p class="subtitle">Find the perfect stay for your pet</p>
       </div>
     </div>
     <div class="level-item has-text-centered">
       <div>
-        <p class="title">Socialize</p>
-        <p class="subtitle">Connect with other pet owners!</p>
+        <p class="title">Connect</p>
+        <p class="subtitle">Connect with pet-sitters</p>
       </div>
     </div>
     <div class="level-item has-text-centered">
       <div>
-        <p class="title">Smile</p>
-        <p class="subtitle">Give them a thumbs up!</p>
+        <p class="title">Pet-sit</p>
+        <p class="subtitle">Want to host pets? Sign up as a pet-sitter</p>
       </div>
     </div>
   </nav>
@@ -65,7 +71,7 @@
         <div class="columns is-centered">
           <div class="column is-8">
             <p class="subtitle center">
-              RuffHouse is a social site where you can upload and share pictures of your pets!
+              Pet-sit, the ultimate site to connect pet-sitters with pet-owners.
             </p>
           </div>
         </div>
