--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -6,9 +6,6 @@
   <style>
     .pad-left {
       padding-left: 15px;
-      border-style: none solid none none;
-      border-color: grey;
-      border-width: 2px;
     }
   </style>
 
@@ -23,14 +20,6 @@
     <div class="columns">
       <div class="column is-2 ">
         <aside class="menu pad-left">
-          <p class="menu-label">
-            General
-          </p>
-          <ul class="menu-list">
-            <li><a>Feed</a></li>
-        
-
-          </ul>
           <!-- post code-->
           <div class="field">
             <label class="label">Board near</label>
@@ -115,17 +104,7 @@
         </aside>
       </div>
       <div class="column is-4-desktop is-offset-2-desktop is-8-tablet">
-        <div class="mb-6">
-          <div class="box">
-            <div class="has-text-weight-bold mb-2">
-              Share a new post
-            </div>
-            <form action="/dog-messages" method="post">
-              <input class="input" type="text" name="message" placeholder="Went to the dog park today" />
-              <button class="button mt-2">Ruff!</button>
-            </form>
-          </div>
-        </div>
+        <div class="title">Available Pet-sitters.</div>
         <div class="feed-stream">
           <%- include('../partials/feed-stream', { feed: feed }) %>
         </div>
