--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -14,6 +14,11 @@
     </div>
     <% if(locals.email) { %>
       <div id="navbarMenu" class="navbar-menu">
+        <div class="navbar-start">
+          <a href="/dashboard" class="navbar-item">
+            <p>Pet-Sit</p>
+          </a>
+        </div>
         <div class="navbar-end">
           <a href="/dashboard" class="navbar-item">
             <%= email %>
@@ -26,8 +31,20 @@
         </div>
       </div>
       <% } else if(locals.hideSignIn) { %>
+        <div id="navbarMenu" class="navbar-menu">
+          <div class="navbar-start">
+            <a href="/" class="navbar-item">
+              Pet-Sit
+            </a>
+          </div>
+        </div>
       <% } else { %>
         <div id="navbarMenu" class="navbar-menu">
+          <div class="navbar-start">
+            <a href="/" class="navbar-item">
+              Pet-Sit
+            </a>
+          </div>
           <div class="navbar-end">
             <div class="navbar-item">
               <a href="/sign-in" class="button is-primary">Sign In
