--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -80,6 +80,10 @@
 
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth(app);
+ 
+// uncomment the line below in testing localhost to emulate auth server
+
+//     auth.useEmulator("http://localhost:9099");
 
     app.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
 
