--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -108,6 +108,7 @@
         <div class="feed-stream">
           <%- include('../partials/feed-stream', { feed: feed }) %>
         </div>
+      
       </div>
     </div>
 
@@ -116,5 +117,38 @@
 </body>
 
 <%- include('../partials/footer') %>
+
+<script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-firestore-compat.js"></script>
+
+<script>
+
+window.onload = () => {
+  const firebaseConfig = {
+    apiKey: "AIzaSyAgz9vCHbxEAz8bfF9Ycyjw2LoS9B_jwXQ",
+    authDomain: "cs5356-fffd1.firebaseapp.com",
+    projectId: "cs5356-fffd1",
+    storageBucket: "cs5356-fffd1.appspot.com",
+    messagingSenderId: "354809257551",
+    appId: "1:354809257551:web:b3606dfcbed9f98bda943a",
+    measurementId: "G-YHZ8CE0LY2"
+  };
+
+  const app = firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  
+  
+  // uncomment in testing
+//   db.useEmulator("http://localhost:8082");
+  
+//   db.collection("pet-sit").get().then((querySnapshot) => {
+//       querySnapshot.forEach((doc) => {
+//           console.log(doc.data());
+//       });
+//   });
+
+}
+
+</script>
 
 </html>
