--- a/src/views/partials/feed-stream.ejs
+++ b/src/views/partials/feed-stream.ejs
@@ -15,16 +15,16 @@
           </div>
           <div class="media-content">
             <p class="title is-4">
-              <%= feedItem.name %>
+              <%= feedItem.email %>
             </p>
             <p class="subtitle is-6">
-              <%= feedItem.nameHandle %>
+              <%= feedItem.email %>
             </p>
           </div>
         </div>
 
         <div class="content">
-          <%= feedItem.message %>
+          <%= feedItem.email %>
         </div>
       </div>
     </div>
