--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -3,6 +3,17 @@
 
 <head>
   <%- include('../partials/head') %>
+  <style>
+    .pad-left {
+      padding-left: 15px;
+    }
+    .pad-right {
+      padding-right: 15px;
+    }
+    html {
+      background-color: #FFE08A;
+    }
+  </style>
 </head>
 
 <body>
