--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -3,9 +3,20 @@
 
 <head>
   <%- include('../partials/head') %>
+  <style>
+    .pad-left {
+      padding-left: 15px;
+    }
+    .pad-right {
+      padding-right: 15px;
+    }
+    html {
+      background-color: #FFE08A;
+    }
+  </style>
 </head>
 
-<body>
+<body class="grey-background">
   <header>
     <%- include('../partials/nav', { hideSignIn: true }) %>
   </header>
@@ -83,7 +94,7 @@
  
 // uncomment the line below in testing localhost to emulate auth server
 
-//     auth.useEmulator("http://localhost:9099");
+    auth.useEmulator("http://localhost:9099");
 
     app.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
 
