--- a/src/views/partials/feed-stream.ejs
+++ b/src/views/partials/feed-stream.ejs
@@ -1,34 +1,90 @@
 <% feed.forEach(function(feedItem) { %>
-  <article style="margin-bottom: 3em;">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="<%= feedItem.imageSource %>" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-left">
-            <figure class="image is-48x48">
-              <img class="is-rounded" src="https://bulma.io/images/placeholders/64x64.png" />
-            </figure>
-          </div>
-          <div class="media-content">
-            <p class="title is-4">
-              <%= feedItem.email %>
-            </p>
-            <p class="subtitle is-6">
-              <%= feedItem.email %>
-            </p>
+  <tr>
+    <td><%= feedItem.name %></td>
+    <td><%= feedItem.address %></td>
+    <td>$<%= feedItem.rate %>/hr</td>
+    <td><%= feedItem.email %></td>
+    <td><button class="button is-danger start-booking" data-target="#modal-confirm-booking-<%= feedItem.email%>">Book</button></td>
+  </tr>
+  
+  <div id="modal-confirm-booking-<%= feedItem.email%>" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <div class="box">
+        <div class="title"><%= feedItem.name %> Booking</div>
+        <div class="is-size-5 has-text-weight-bold">Details</div>
+
+            <div>Pet-sit name: <%= feedItem.name %></div>
+            <div>Address: <%= feedItem.address %></div>
+            <div>Hourly rate: $<%= feedItem.rate %>/hr</div>
+            <div>Email: <%= feedItem.email %></div>
+        <br>
+        
+        <div class="field">
+          <label class="label">Drop off date</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input">
           </div>
         </div>
-
-        <div class="content">
-          <%= feedItem.email %>
+        
+        <div class="field">
+          <label class="label">Pick up date</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input">
+          </div>
+        </div>
+        
+        <div class="field is-grouped">
+          <div class="control">
+            <button class="button is-danger submit-bookingconf" data-target="#modal-confirm-booking-<%= feedItem.email%>">Submit</button>
+          </div>
+          <div class="control">
+            <button class="button is-link is-light close-bookingconf" data-target="#modal-confirm-booking-<%= feedItem.email%>">Cancel</button>
+          </div>
         </div>
       </div>
     </div>
+    <button class="modal-close is-large close-bookingconf" data-target="#modal-confirm-booking-<%= feedItem.email%>" aria-label="close"></button>
+  </div>
+<% }) %>
 
-  </article>
+<script>
+let petSitterBookings = document.getElementsByClassName("start-booking");
+let submitButtons = document.getElementsByClassName("submit-bookingconf");
+let cancelButtons = document.getElementsByClassName("close-bookingconf");
 
-  <% }) %>
+for(let el of petSitterBookings) {
+  el.addEventListener("click", openModal);
+}
+for(let el of submitButtons) {
+  el.addEventListener("click", submitBooking);
+}
+for(let el of cancelButtons) {
+  el.addEventListener("click", cancelBooking);
+}
+
+function openModal(event) {
+  let targetId = event.target.getAttribute("data-target").slice(1);
+  let modal = document.getElementById(targetId);
+  modal.classList.add("is-active");
+}
+
+function submitBooking(event) {
+  let email = event.target.getAttribute("data-target").split('@')[1];
+  console.log("submit booking for email: " + email);
+  
+  closeModal(event);
+}
+
+function cancelBooking(event) {  
+  closeModal(event);
+}
+
+function closeModal(event) {
+  let targetId = event.target.getAttribute("data-target").slice(1);
+  let modal = document.getElementById(targetId);
+  modal.classList.remove("is-active");
+}
+    
+  
+</script>
