--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,8 +1,8 @@
-<nav class="navbar has-background-info-dark">
+<nav class="navbar is-black">
   <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item my-navbar-logo" href="/">
-        <figure class="image large">
+      <a class="navbar-item" href="/">
+        <figure class="image">
           <img class="is-rounded" src="/static/dog-logo-png.png" alt="Logo">
         </figure>
       </a>
