--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -20,7 +20,7 @@
           </a>
         </div>
         <div class="navbar-end">
-          <a href="/dashboard" class="navbar-item">
+          <a href="/dashboard" class="navbar-item" id="user-email">
             <%= email %>
               <i class="material-icons">person_outline</i>
           </a>
