--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -94,7 +94,7 @@
  
 // uncomment the line below in testing localhost to emulate auth server
 
-//     auth.useEmulator("http://localhost:9099");
+    auth.useEmulator("http://localhost:9099");
 
     app.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
 
